# feedvault

./: .gitignore  .gitmodules  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4b967d7d94c6_item_source_updated_at_to_non_nullable_.py  675fe190439f_add_item_meta_field.py  a9082847a37a_initial_schema.py  c33971395131_add_scrapejobrecord_and_scrapelog.py  ca917ef1b2bc_move_target_type_from_scrapejob_to_.py  cf01415369d8_init.py  df68e3cd2b71_add_item_thumbnail_url_field.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: authors.py  categories.py  collections.py  data.py  feeds.py  items.py  router.py  scrape.py  sources.py
backend/app/core/: constants.py  crud.py  crypto.py  data_export.py  data_import.py  image.py  sorting.py  tags.py  upsert.py
backend/app/core/sources/: api.py  base.py  models.py  registry.py
backend/app/models/: __init__.py  author.py  base.py  category.py  collection.py  export.py  feed.py  item.py  item_media.py  links.py  scrape_job.py  scrape_log.py  source.py  stats.py
frontend/: .prettierrc  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  App.tsx  app.css
frontend/src/api/: client.ts
frontend/src/components/feeds/: FeedTabs.tsx
frontend/src/components/items/: ItemCard.tsx  ItemGrid.tsx  ItemModal.tsx
frontend/src/components/layout/: AppSidebar.tsx
frontend/src/hooks/: useFeeds.ts  useItems.ts  useSources.ts
frontend/src/lib/: config.js  theme.css
frontend/src/types/: index.ts
(+59 files in other folders)
