[project]
name = "feedvault-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "cryptography>=46.0.7",
    "fastapi>=0.136.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
